Adding a lab for week 2 and the required files (class and reading)

--- a/static/slides/02-version-control/slides.Rmd
+++ b/static/slides/02-version-control/slides.Rmd
@@ -372,6 +372,7 @@ doc/**/*.pdf
 # Resources
 
 - Git's everyday commands, type `man giteveryday` in your terminal/command line.
+  and the very nice [cheatsheet](https://github.github.com/training-kit/).
 
 - My personal choice for nightstand book: The Pro-git book (free online) [(link)](https://git-scm.com/book)
 
