--- a/content/reading/10-reading.Rmd
+++ b/content/reading/10-reading.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Version control and reproducible research"
+title: "High performance computing, cloud computing"
 date: "2020-06-02"
 citeproc: false
 bibliography: ../../static/bib/references.bib
@@ -8,24 +8,15 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 # Required reading
 
-You are expected to have read this when you show up for the session.
+You are expected to have read this when you show up for the session:
 
-- [Chapter 1 Why Git? Why GitHub?](https://happygitwithr.com/big-picture.html) of
-  the "Happy Git and GitHub for the useR" by Jenny Bryan and Jim Hester.
+- Take a look at the High Performance Computing CRAN task View ([link](https://CRAN.R-project.org/view=HighPerformanceComputing))
 
-- Roger Peng's Mastering Software Development Book Section 3.9 Version control
-  and Github
-  [(link)](https://bookdown.org/rdpeng/RProgDA/version-control-and-github.html)
-
-You are also expected to have git installed in your system and having a
-GitHub account. For this see
-[here](https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration)
-and [here](http://github.com/).
+- Chapter 22 of RD Peng's [R Programming for Data Science](https://bookdown.org/rdpeng/rprogdatascience/) ([link](https://bookdown.org/rdpeng/rprogdatascience/parallel-computation.html))
 
 # Optional reading
 
-- Chapter one of the [Pro git book](https://git-scm.com/book/en/v2) will give you
-  a more technical overview of what's git and what happens under-the-hood.
+TBD
 
 
 
