--- a/content/class/07-class.Rmd
+++ b/content/class/07-class.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Text mining and Regular Expressions"
-linktitle: "8: text mining"
+linktitle: "7: text mining"
 date: "2020-01-10"
 class_date: "2020-01-10"
 citeproc: false
@@ -20,17 +20,11 @@ editor_options:
   chunk_output_type: console
 ---
 
-<!-- BLOGDOWN-HEAD -->
-<!-- /BLOGDOWN-HEAD -->
+## Lab Exercise
 
 
-<div id="lab-exercise" class="section level2">
-<h2>Lab Exercise</h2>
-</div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p><a href="/slides/08-textmining/slides.html">link</a></p>
-</div>
-<div id="links" class="section level2">
-<h2>Links</h2>
-</div>
+## Slides
+
+[link](/slides/07-textmining/slides.html)
+
+## Links
